<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BankCoinzActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_bank"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:fitsSystemWindows="true" />

    <TextView
        android:layout_marginTop="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:id="@+id/hint_bank"
        android:textSize="30sp"
        android:text="@string/click_something_to_operate"
        android:textAlignment="center" />

    <!-- a textview to tell people no coinz left -->
    <TextView
        android:layout_marginTop="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hint_no_coin_bank"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/hint_no_coin"
        android:textAlignment="center" />


    <ListView
            android:layout_marginTop="?android:attr/actionBarSize"
            android:id="@+id/coin_list_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_frame_bank"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>