<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_property"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedbackground"
        android:orientation="vertical">
...
        </LinearLayout>


        <Button

            android:layout_marginTop="10dp"
            android:id="@+id/put_coin_in_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            android:text="@string/coin_in_bank"
            android:textAllCaps="false"/>
...
